--- a/ITPM 22 WebA/Views/Memb/Details.cshtml
+++ b/ITPM 22 WebA/Views/Memb/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>NewMemberClass</h4>
+    <h4>********</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -49,6 +49,7 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @*@@Html.ActionLink("Edit", "Edit", new { /*id = Model.PrimaryKey */ })*@
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Mid })|
     <a asp-action="Index">Back to List</a>
 </div>
