--- a/ITPM 22 WebA/Views/Memb/Details.cshtml
+++ b/ITPM 22 WebA/Views/Memb/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ITPM_22_WebA.Models.NewMemberClass
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Member Details";
 }
 
 <h1>Details</h1>
