--- a/ITPM 22 WebA/Views/Memb/Create.cshtml
+++ b/ITPM 22 WebA/Views/Memb/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>NewMemberClass</h4>
+<h1>Add New Member</h1>
+<h4>Fill the below fields to add a new member</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -43,7 +42,7 @@
                 <span asp-validation-for="Pnumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Add Member" class="btn btn-primary" />
             </div>
         </form>
     </div>
