--- a/ITPM 22 WebA/Views/Home/Index.cshtml
+++ b/ITPM 22 WebA/Views/Home/Index.cshtml
@@ -1,13 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<script src="lib\jquery\dist\jquery.js"></script>
 
-<button id=" btnpdf">Generate PDF</button>
-
-<script type="text/javascript">
-    $("#btnPdf").click(function () {
-        window.open('../Home/PrintMember?param=1','_blank');
-
-    });
-</script>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
