--- a/ITPM 22 WebA/Views/Memb/Create.cshtml
+++ b/ITPM 22 WebA/Views/Memb/Create.cshtml
@@ -12,10 +12,10 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @*@<div class="form-group">
-                <label asp-for="Mid" class="control-label"></label>
-                <input asp-for="Mid" class="form-control" />
-                <span asp-validation-for="Mid" class="text-danger"></span>
-            </div>*@
+            <label asp-for="Mid" class="control-label"></label>
+            <input asp-for="Mid" class="form-control" />
+            <span asp-validation-for="Mid" class="text-danger"></span>
+        </div>*@
             <div class="form-group">
                 <label asp-for="Mname" class="control-label"></label>
                 <input asp-for="Mname" class="form-control" />
@@ -36,11 +36,39 @@
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
+
+                <div class="form-group">
+
+                    <asp:TextBox ID="txtDate" runat="server" Readonly="true" />
+                    <asp:Button ID="btnSubmit" runat="server" Text="Submit" />
+
+                </div>
+
+                <script type="text/javascript">
+                    $(function () {
+                        $('[id*=txtDate]').datepicker({
+                            changeMonth: true,
+                            changeYear: true,
+                            format: "dd/mm/yyyy",
+                            language: "tr"
+
+
+                        });
+
+                    });
+
+                </script>
+
+
+
             <div class="form-group">
                 <label asp-for="Pnumber" class="control-label"></label>
                 <input asp-for="Pnumber" class="form-control" />
                 <span asp-validation-for="Pnumber" class="text-danger"></span>
             </div>
+
+
+
             <div class="form-group">
                 <input type="submit" value="Add Member" class="btn btn-primary" />
             </div>
