--- a/ITPM 22 WebA/Views/Memb/Index.cshtml
+++ b/ITPM 22 WebA/Views/Memb/Index.cshtml
@@ -40,7 +40,7 @@
             font-family: Roboto;
             font-weight: bold;
             padding: 8px;
-            text-align:center
+            text-align: center
         }
 
 
@@ -91,8 +91,8 @@
             color: #235CCD;
             background: #f2f2f2;
         }
-        
-       /*         .my-custom-scrollbar {
+
+        /*         .my-custom-scrollbar {
                     position:page;
                     height: 500px;
                     overflow: auto;
@@ -101,7 +101,7 @@
                 .table-wrapper-scroll-y {
                     display: block;
                 }
-        
+
            */
     </style>
 </head>
@@ -112,11 +112,11 @@
 @*<div class="addordersButton" style="position:absolute;margin-left:15px;margin-top:25px">*@
 <p>
     <a asp-action="Create" data-toggle="tooltip" title="You can Add New Members here!! "
-       class="btn btn-primary" style="position:absolute; margin-left:15px;";>Add New Member +</a>
+       class="btn btn-primary" style="position:absolute; margin-left:15px;" ;>Add New Member +</a>
 </p>
 <form method="get" asp-action="Index">
     <p style="padding-left:25em;">
-        <input type="search" placeholder=" Enter Member Name Or Email" value=" @ViewData["Getmemberdetails"] " name="Membsearh" style="width: 500px; border-radius: 15px; padding:1px ";/>
+        <input type="search" placeholder=" Enter Member Name Or Email" value=" @ViewData["Getmemberdetails"] " name="Membsearh" style="width: 500px; border-radius: 15px; padding:1px " ; />
         <input type="submit" value="search" class="btn btn-primary" />
         <a asp-action="Index"> List All Members</a>
     </p>
@@ -191,7 +191,7 @@
 @section scripts{
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.2/build/alertify.min.js"></script>
 
-<script type="text/javascript">
+    <script type="text/javascript">
 $(document).ready( function () {
 $('#myTable').DataTable({
 dom: 'Bfrtip',
@@ -223,3 +223,23 @@ $('[data-toggle="tooltip"]').tooltip();
 
     </script>
 }
+
+@*report button*@
+
+<p style="margin-bottom: 20px">
+<button class="btn btn-primary" id="btnPdf">Generate Report</button>
+@*<button class="btn btn-success" id="btnPdf2"> Generate ExcelFile</button>*@
+</p>
+
+<script type="text/javascript">
+    $("#btnPdf").click(function () {
+        window.open('../Memb/PrintReport?param=1', '_blank');
+    });
+
+
+    //$("#btnPdf2").click(function () {
+    //    window.open('../OrderList/PrintDeliveryExcel', '_blank');
+    //});
+
+
+</script>
